# VitaAssistant

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: config.h  config_runtime.c  config_runtime.h  config_secret.h.example  ha_api.c  ha_api.h  main.c  net.c  net.h  ui.c  ui.h
